[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# RV1106 真实摄像头 (链接 librk_camera.so + librockit_full.so)
# 编译: cargo build --features rv1106 --target armv7-unknown-linux-gnueabihf
rv1106 = []

[dependencies]
libp2p = { workspace = true, features = [
    "tokio", "tcp", "quic", "noise", "yamux",
    "relay", "dcutr", "identify", "ping", "macros",
] }
libp2p-stream = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"

# 共享协议
proto = { path = "../proto" }

[build-dependencies]
cc = "1"
