[package]
name = "mobile-core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]  # .so for Android, .a for iOS

[dependencies]
libp2p = { workspace = true, features = [
    "tokio", "tcp", "quic", "noise", "yamux",
    "relay", "dcutr", "identify", "ping", "macros",
] }
libp2p-stream = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = "1"
tracing = { workspace = true }
crossbeam-channel = "0.5"

proto = { path = "../proto" }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
