[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libp2p = { workspace = true, features = ["tokio", "tcp", "quic", "noise", "yamux", "relay", "identify", "ping", "macros"] }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
